<resources>
    <string name="app_name">My Application</string>
    <string name="kuritsa">Острая курица</string>
    <string name="variants">Найдено 6 вариантов</string>
    <string name="korzina">Корзина</string>
    <string name="podtverdit">Подтвердить</string>
    <string name="vkusnaia_eda">Вкусная еда для вас</string>
    <string name="poisk">Поиск</string>
    <string name="eda">Еда</string>
    <string name="napitki">Напитики</string>
    <string name="zakuski">Закуски</string>
    <string name="sousy">Соусы</string>
    <string name="registr">Регистрация</string>
    <string name="voiti">Войти</string>
    <string name="pochta">Почта</string>
    <string name="gmail">name@gmail.com</string>
    <string name="parol">Пароль</string>
    <string name="qqqq">**********</string>
    <string name="zabyli_parol">Забыли пароль?</string>
    <string name="nachat1">Начать</string>
    <string name="profile">Профиль</string>
    <string name="zakazy">Заказы</string>
    <string name="akcii">Акции</string>
    <string name="pravila">Наши правила</string>
    <string name="bezopast">Безопастность</string>
    <string name="vyiti">Выйти</string>
    <string name="ookat">ООКАТ</string>
    <string name="nachat">Начать</string>
    <string name="podtverditt">Подтверждение</string>
    <string name="oplatit">Оплатить</string>
    <string name="podtvejdenie">Подтверждение</string>
    <string name="podtverdittt">Подтвердить</string>
    <string name="moi_profile">Мой профиль</string>
    <string name="redact">Редактировать</string>
    <string name="pomosh">Помощь</string>
    <string name="adress">Адрес</string>
    <string name="lubimoe">Любимое</string>
    <string name="zakazyy">Заказы</string>
    <string name="imya_fam">Имя Фамилие</string>
    <string name="opisanie">Описание</string>
    <string name="nomer_tel">+996 777 777 777</string>
    <string name="dannye">Данные</string>
    <string name="stake_semga">Стейк из семги</string>
    <string name="cena">550 сом</string>
    <string name="opisaniee">Описание</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eget efficitur purus.</string>
    <string name="lorrem_ipausm">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eget efficitur purus.</string>
    <string name="uslovia_dostavki">Условия доставки</string>
    <string name="v_korzinu">В корзину</string>
    <string name="som450">450 сом</string>
    <string name="rybanaparu">Рыба на пару</string>
    <string name="som550">550 сом</string>
    <string name="stakeizsemgi">Стейк из семги</string>
    <string name="stakeizsemgii">Стейк из семги</string>
    <string name="rissovosh">Рис с овощами</string>
    <string name="risskur">Рис с c курицей</string>
    <string name="jarennkur">Жаренная курица</string>
    <string name="som5500">550 сом</string>
    <string name="som4500">450 сом</string>
    <string name="som5000">500 сом</string>
    <string name="som3500">350 сом</string>
    <string name="xxxxxxx">*********</string>
    <string name="carta">Карта</string>
    <string name="nal">Наличкой</string>
    <string name="bankshet">Банковский счет</string>
    <string name="promo">Промокод</string>
    <string name="sposobopla">Способ оплаты</string>
    <string name="adresss">Адрес</string>
    <string name="redactir">Редактировать</string>
    <string name="bishkekk">Бишкек</string>
    <string name="bokonabaeva">Улица Боконбаева, 155, кв. 24</string>
    <string name="nomer777777">+996 777 777 777</string>
    <string name="domoi">Домой</string>
    <string name="samovyz">Самовызов</string>
    <string name="sposobdostavki">Способ доставки</string>
    <string name="cenaaa">1750 сом</string>
    <string name="vsego">Всего</string>
</resources>